--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.movies {
+/* .movies {
   display: flex;
   flex-wrap: wrap;
 }
@@ -13,9 +13,9 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   width: 200px;
-  
+
 }
 
 .movie-info {
   width: 200px;
-}
+} */
