--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,8 @@
 .header-container{
+  width: 100%;
+  height: 15vh;
   text-align: center;
+  position: fixed;
+  z-index: 1;
+  background: white;
 }
