--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,5 +3,51 @@
   height: 15vh;
   text-align: center;
   position: fixed;
-  background: white;
+  background: black;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+
+  h1, .nav-link {
+    color: white;
+  }
+
+  h1 {
+    margin: 40px;
+  }
+
+  .search-bar {
+    width: 400px;
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+
+    input, button {
+      margin: auto;
+      outline: none;
+      border: none;
+      border-radius: 20px;
+    }
+
+    .search-input {
+      width: 100%;
+      height: 20px;
+      box-shadow: 1px, 1px, 6px, -2px grey;
+      padding: 10px;
+    }
+
+    .search-button {
+      padding: 0 25px;
+      height: 46px;
+    }
+  }
+
+  .nav {
+    margin: 40px;
+    
+    .nav-link {
+      font-size: 1.5rem;
+      margin: 15px;
+    }
+  }
 }
