--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,40 +1,50 @@
-.movies {
+.movies-container {
   padding-top: 15vh;
-  display: flex;
-  flex-wrap: wrap;
   background: black;
-}
+  color: white;
+  text-align: center;
 
-.movie {
-  margin: 20px;
-  padding: 10px;
-  width: 220px;
+  .genre-name {
+    font-size: 40px;
+  }
 
-  .vote-average {
-    position: relative;
+  .movies {
+    display: flex;
+    flex-wrap: wrap;
 
-    svg {
-        position: absolute;
-        top: -20px;
-        right: -23px;
+    .movie {
+      margin: 20px;
+      padding: 10px;
+      width: 220px;
+    
+      .vote-average {
+        color: #494949;
+        position: relative;
+    
+        svg {
+            position: absolute;
+            top: -20px;
+            right: -23px;
+          }
+    
+        p {
+          position: absolute;
+          top: -10px;
+          right: 0px;
+          font-weight: bold;
+        }
       }
-
-    p {
-      position: absolute;
-      top: -10px;
-      right: 0px;
-      font-weight: bold;
+    
+      img {
+        border: 10px solid #494949;
+        border-radius: 30px;
+      }
+    
+      .movie-info {
+        width: 200px;
+        text-align: center;
+      }
     }
   }
-
-  img {
-    border: 10px solid #494949;
-    border-radius: 30px;
-  }
-
-  .movie-info {
-    color: white;
-    width: 200px;
-    text-align: center;
-  }
 }
+
