--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,10 @@
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+
 .App {
   text-align: center;
 }
-
-/* .movies {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.movie {
-  margin: 10px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  width: 200px;
-
-}
-
-.movie-info {
-  width: 200px;
-} */
