--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,34 @@
-.header-container{
+* {
+  box-sizing: border-box;
+}
+
+.header-container {
   width: 100%;
   height: 15vh;
+  padding: 50px;
   text-align: center;
   position: fixed;
   background: black;
   display: flex;
   justify-content: space-between;
   z-index: 1;
+  color: white;
 
-  h1, .nav-link {
-    color: white;
-  }
+  .title-container {
+    display: flex;
 
-  h1 {
-    margin: 40px;
+    .menu-icon {
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      color: white;
+    }
+
+    h1 {
+      display: flex;
+      align-items: center;
+      margin: 40px;
+    }
   }
 
   .search-bar {
@@ -21,6 +36,7 @@
     margin-top: 40px;
     display: flex;
     align-items: center;
+    margin: 0 auto;
 
     input, button {
       margin: auto;
@@ -42,12 +58,82 @@
     }
   }
 
-  .nav {
-    margin: 40px;
-    
-    .nav-link {
+  .side-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    color: white;
+    padding: 1rem;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    display: flex;
+    flex-direction: column;
+
+    .close-menu {
+      align-self: flex-end;
+      background: none;
+      border: none;
+      color: white;
       font-size: 1.5rem;
-      margin: 15px;
+      cursor: pointer;
+    }
+
+    nav {
+      display: flex;
+      flex-direction: column;
+
+      .side-menu-link {
+        width: 100%;
+        height: 50px;
+        color: white;
+        font-size: 1.5rem;
+        font-weight: bold;
+        text-decoration: none;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .side-menu-link:hover {
+        background: rgb(79, 77, 77);
+      }
+    }
+
+    hr {
+      width: 100%;
+      margin-top: 30px;
+    }
+
+    .genre-list {
+      display: flex;
+      flex-direction: column;
+      cursor: pointer;
+
+      h2 {
+        font-weight: bold;
+        margin-left: 0;
+        font-size: 1.5rem;
+      }
+
+      .genre-item {
+        width: 100%;
+        height: 45px;
+        color: white;
+        font-size: 1.2rem;
+        text-decoration: none;
+        border-radius: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+  
+      .genre-item:hover {
+        background: rgb(79, 77, 77);
+      }
     }
   }
 }
