--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -6,14 +6,19 @@
 
   .genre-name {
     font-size: 40px;
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #444;
+    padding-bottom: 0.5rem;
+    color: rgb(228, 226, 226);
   }
 
   .movies {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
 
     .movie {
-      margin: 20px;
+      margin: 30px;
       padding: 10px;
       width: 220px;
     
