--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer-container {
   width: 100%;
-  background: white;
+  background: black;
+  color: white;
 
   .footer-content {
     display: flex;
@@ -8,4 +9,9 @@
     align-items: center;
     flex-direction: column;
   }
+}
+
+.footer-container.light {
+  background: white;
+  color: black;
 }
