--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,6 +11,7 @@
   background: black;
   z-index: 1;
   color: white;
+  transition: background 0.5s ease, color 0.5s ease;
 
   .title-toggle-container {
     display: flex;
